added some initial styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Victor Solano | Portfolio</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
+<body class="darkTheme">
     <h1>hey</h1>
 
     <script type="module" src="./scripts/main.js"></script>
