--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <title>Victor Solano | Portfolio</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body class="darkTheme">
-    <h1>hey</h1>
+<body data-theme="dark">
+    <nav>
+        <div class="navbarContent siteContainer">
+            <a href="" class="logo">Victor Solano</a>
+            <ul class="linksContent">
+                <li><a href="#" class="navLink">About</a></li>
+                <li><a href="#" class="navLink">Resume</a></li>
+                <li><a href="#" class="navLink">Portfolio</a></li>
+                <li><a href="#" class="navLink">Contact</a></li>
+            </ul>
+            <button id="themeToggle">
+                <svg class="sun-svg" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 18.5C15.5899 18.5 18.5 15.5899 18.5 12C18.5 8.41015 15.5899 5.5 12 5.5C8.41015 5.5 5.5 8.41015 5.5 12C5.5 15.5899 8.41015 18.5 12 18.5Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M19.14 19.14L19.01 19.01M19.01 4.99L19.14 4.86L19.01 4.99ZM4.86 19.14L4.99 19.01L4.86 19.14ZM12 2.08V2V2.08ZM12 22V21.92V22ZM2.08 12H2H2.08ZM22 12H21.92H22ZM4.99 4.99L4.86 4.86L4.99 4.99Z" stroke="#292D32" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+            </button>
+        </div>
+    </nav>
 
     <script type="module" src="./scripts/main.js"></script>
 </body>
