added moible nav and added hover effect for its links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body data-theme="dark">
-    <nav>
+    <nav id="mobileNav">
+        <ul class="mobileLinksContent">
+            <li><a href="#" class="navLink">About</a></li>
+            <li><a href="#" class="navLink">Resume</a></li>
+            <li><a href="#" class="navLink">Portfolio</a></li>
+            <li><a href="#" class="navLink">Contact</a></li>
+        </ul>
+    </nav>
+
+    <nav class="navbar">
         <div class="navbarContent siteContainer">
             <a href="" class="logo">Victor Solano</a>
             <ul class="linksContent">
