created responsive queries and a mixin

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar">
         <div class="navbarContent siteContainer">
-            <a href="" class="logo">Victor Solano</a>
+            <a href="" class="logo">V.S</a>
             <ul class="linksContent">
                 <li><a href="#" class="navLink">About</a></li>
                 <li><a href="#" class="navLink">Resume</a></li>
