--- a/index.html
+++ b/index.html
@@ -34,6 +34,49 @@
         </div>
     </nav>
 
+
+    <!-- main section -->
+    <header  id="mainSection">
+        <div class="leftSection">
+            <div class="leftSectionContent">
+                <h1 class="title">
+                    Victor Solano
+                </h1>
+                <div class="location">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 13.4299C13.7231 13.4299 15.12 12.0331 15.12 10.3099C15.12 8.58681 13.7231 7.18994 12 7.18994C10.2769 7.18994 8.88 8.58681 8.88 10.3099C8.88 12.0331 10.2769 13.4299 12 13.4299Z" stroke="#292D32" stroke-width="1.5"/>
+                        <path d="M3.62001 8.49C5.59001 -0.169998 18.42 -0.159997 20.38 8.5C21.53 13.58 18.37 17.88 15.6 20.54C13.59 22.48 10.41 22.48 8.39001 20.54C5.63001 17.88 2.47001 13.57 3.62001 8.49Z" stroke="#292D32" stroke-width="1.5"/>
+                        </svg>
+                        
+                     <p>Trinidad & Tobago</p>
+                </div>
+                <div class="skillTags">
+                    <div class="tag">
+                        <p>Software Developer</p>
+                    </div>
+                    <div class="tag">
+                        <p>UX/UI Designer</p>
+                    </div>
+                </div>
+                <p class="aboutMeText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque impedit, magni neque dolor eveniet error tempore explicabo possimus, temporibus, et laudantium vel. Vero, impedit! Blanditiis accusamus numquam nemo illo repellendus.
+                </p>
+                <a href="" class="viewProjectsCTA">
+                    View Projects
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3.5 12H20.33" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        
+                </a>
+            </div>
+        </div>
+        <div class="rightSection">
+
+        </div>
+        <div class="overlay"></div>
+    </header>
+
     <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
