added more styles to header main sec

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
     <!-- main section -->
-    <header  id="mainSection">
+    <header  id="mainSection" class="siteContainer">
         <div class="leftSection">
             <div class="leftSectionContent">
                 <h1 class="title">
