changed font size sass variables to css to improve media queries code length. commented out cards section to test smaller initial screen size

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             </div>
         </div>
         <div class="rightSection">
-            <div class="rightSectionContent">
+            <!-- <div class="rightSectionContent">
 
-            </div>
+            </div> -->
         </div>
         <!-- test div for theme transition -->
         <div class="overlay"></div>
