added my stack title

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             </div>
         </div>
         <div class="rightSection">
+            <div class="myStackTitle">
+                <p>My Stack</p>
+            </div>
             <div class="rightSectionContent">
 
             </div>
