added initial cursor hover on language cards functionality

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 
             </div>
         </div>
-        <!-- test div for theme transition -->
-        <div class="overlay"></div>
+        <div id="textCursor"></div>
     </header>
 
     <script type="module" src="./scripts/main.js"></script>
