added animations to hover effect on languages

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
 
             </div>
         </div>
-        <div id="textCursor"></div>
+        <div id="textCursor">
+            <p id="langText"></p>
+        </div>
     </header>
 
     <script type="module" src="./scripts/main.js"></script>
