--- a/index.html
+++ b/index.html
@@ -96,11 +96,17 @@
 
             </div>
         </div>
-        <div id="textCursor">
-            <p id="langText"></p>
+        <div class="watermark">
+            <div class="text">UX/UI DESIGNER</div>
+            <div class="text">SOFTWARE DEVELOPER</div>
+            <div class="text">WEB DEVELOPER</div>
         </div>
     </header>
 
+
+<div id="textCursor">
+    <p id="langText"></p>
+</div>
     <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
