--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
         </div>
     </header>
 
+    <!-- experience section -->
+     <section id="experienceSection" class="siteContainer">
+
+     </section>
+
 
 <div id="textCursor">
     <p id="langText"></p>
