commenting out watermark until bug is resolved

--- a/index.html
+++ b/index.html
@@ -96,11 +96,7 @@
 
             </div>
         </div>
-        <div class="watermark">
-            <div class="text">UX/UI DESIGNER</div>
-            <div class="text">SOFTWARE DEVELOPER</div>
-            <div class="text">WEB DEVELOPER</div>
-        </div>
+
     </header>
 
     <!-- experience section -->
@@ -112,6 +108,12 @@
 <div id="textCursor">
     <p id="langText"></p>
 </div>
+
+<!-- <div class="watermark">
+    <div class="text">UX/UI DESIGNER</div>
+    <div class="text">SOFTWARE DEVELOPER</div>
+    <div class="text">WEB DEVELOPER</div>
+</div> -->
     <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
