--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header  id="mainSection" class="siteContainer">
         <div class="leftSection">
             <div class="leftSectionContent">
-                <h1 class="title">
+                <h1 class="sectionTitle">
                     Victor Solano
                 </h1>
                 <div class="location">
@@ -61,7 +61,7 @@
                 <p class="aboutMeText">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque impedit, magni neque dolor eveniet error tempore explicabo possimus, temporibus, et laudantium vel. Vero, impedit! Blanditiis accusamus numquam nemo illo repellendus.
                 </p>
-                <a href="" class="viewProjectsCTA">
+                <a href="" class="viewProjectsCTA cta">
                     View Projects
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
@@ -101,7 +101,21 @@
 
     <!-- experience section -->
      <section id="experienceSection" class="siteContainer">
+        <div class="leftSection">
+            <h1 class="sectionTitle">
+                Experience
+            </h1>
+            <a href="" class="downloadResumeCTA cta">
+                Download Resume
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3.5 12H20.33" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+        </div>
+        <div class="rightSection">
 
+        </div>
      </section>
 
 
