--- a/index.html
+++ b/index.html
@@ -114,9 +114,13 @@
             </a>
         </div>
         <div class="rightSection">
+            <div class="experienceContainer">
 
+            </div>
         </div>
      </section>
+
+
 
 
 <div id="textCursor">
