added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body data-theme="dark">
     <nav id="mobileNav">
         <ul class="mobileLinksContent">
-            <li><a href="#" class="navLink">About</a></li>
-            <li><a href="#" class="navLink">Resume</a></li>
-            <li><a href="#" class="navLink">Portfolio</a></li>
-            <li><a href="#" class="navLink">Contact</a></li>
+            <li><a href="#mainSection" class="navLink">About</a></li>
+            <li><a href="#experienceSection" class="navLink">Resume</a></li>
+            <li><a href="#portfolioSection" class="navLink">Portfolio</a></li>
+            <li><a href="#contactSection" class="navLink">Contact</a></li>
         </ul>
     </nav>
 
@@ -20,10 +20,10 @@
         <div class="navbarContent siteContainer">
             <a href="" class="logo">V.S</a>
             <ul class="linksContent">
-                <li><a href="#" class="navLink">About</a></li>
-                <li><a href="#" class="navLink">Resume</a></li>
-                <li><a href="#" class="navLink">Portfolio</a></li>
-                <li><a href="#" class="navLink">Contact</a></li>
+                <li><a href="#mainSection" class="navLink">About</a></li>
+                <li><a href="#experienceSection" class="navLink">Resume</a></li>
+                <li><a href="#portfolioSection" class="navLink">Portfolio</a></li>
+                <li><a href="#contactSection" class="navLink">Contact</a></li>
             </ul>
             <button id="themeToggle">
                 <svg class="sun-svg" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -61,7 +61,7 @@
                 <p class="aboutMeText">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque impedit, magni neque dolor eveniet error tempore explicabo possimus, temporibus, et laudantium vel. Vero, impedit! Blanditiis accusamus numquam nemo illo repellendus.
                 </p>
-                <a href="" class="viewProjectsCTA cta">
+                <a href="#portfolioSection" class="viewProjectsCTA cta">
                     View Projects
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
