added a more organized format for scss code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         </div>
     </nav>
 
-
     <!-- main section -->
     <header  id="mainSection" class="siteContainer">
         <div class="leftSection">
@@ -100,41 +99,37 @@
     </header>
 
     <!-- experience section -->
-     <section id="experienceSection" class="siteContainer">
-        <div class="leftSection">
-            <div class="expTitleContainer">
-                <h1 class="sectionTitle">
-                    Experience
-                </h1>
-                <a href="" class="downloadResumeCTA cta">
-                    Download Resume
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M3.5 12H20.33" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </a>
-            </div>
+    <section id="experienceSection" class="siteContainer">
+    <div class="leftSection">
+        <div class="expTitleContainer">
+            <h1 class="sectionTitle">
+                Experience
+            </h1>
+            <a href="" class="downloadResumeCTA cta">
+                Download Resume
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3.5 12H20.33" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+        </div>
+
+    </div>
+    <div class="rightSection">
+        <div class="experienceContainer">
 
         </div>
-        <div class="rightSection">
-            <div class="experienceContainer">
+    </div>
+    </section>
 
-            </div>
-        </div>
-     </section>
+    <!-- portfolio section -->
+    <section id="portfolioSection" class="siteContainer">
 
+    </section>
 
-
-
-<div id="textCursor">
-    <p id="langText"></p>
-</div>
-
-<!-- <div class="watermark">
-    <div class="text">UX/UI DESIGNER</div>
-    <div class="text">SOFTWARE DEVELOPER</div>
-    <div class="text">WEB DEVELOPER</div>
-</div> -->
+    <div id="textCursor">
+        <p id="langText"></p>
+    </div>
     <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
