--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <p class="aboutMeText">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque impedit, magni neque dolor eveniet error tempore explicabo possimus, temporibus, et laudantium vel. Vero, impedit! Blanditiis accusamus numquam nemo illo repellendus.
+                    Hi, I'm Victor, a passionate designer and developer. I thrive at the intersection of creativity and technology, bringing ideas to life through engaging web and mobile designs. sample text.
                 </p>
                 <a href="#portfolioSection" class="viewProjectsCTA cta">
                     View Projects
@@ -113,7 +113,6 @@
                 </svg>
             </a>
         </div>
-
     </div>
     <div class="rightSection">
         <div class="experienceContainer">
