--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h1 class="sectionTitle">
                 Experience
             </h1>
-            <a href="" class="downloadResumeCTA cta">
+            <a target="_blank" href="./assets/pdf/Victor Solano Resume.pdf" class="downloadResumeCTA cta">
                 Download Resume
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
