started styles for portfolio section and changed border radius on buttons

--- a/index.html
+++ b/index.html
@@ -123,6 +123,38 @@
 
     <!-- portfolio section -->
     <section id="portfolioSection" class="siteContainer">
+        <h1 class="sectionTitle">
+            Portfolio
+        </h1>
+
+        <div class="projectFilterContainer">
+            <!-- create mobile dropdown view -->
+             <button class="dropdownListBtn">
+                Select Category
+
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19.9201 8.94995L13.4001 15.47C12.6301 16.24 11.3701 16.24 10.6001 15.47L4.08008 8.94995" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>    
+             </button>
+            <ul class="categoryList">
+                <li>
+                    <button>All</button>
+                </li>
+                <li>
+                    <button>UX/UI Design</button>
+                </li>
+                <li>
+                    <button>Web Development</button>
+                    
+                </li>
+                <li>
+                    <button>App Development</button>
+                </li>
+            </ul>
+        </div>
+        <div class="projectsSection">
+
+        </div>
 
     </section>
 
