--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victor Solano | Portfolio</title>
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://kit.fontawesome.com/b3a4b70f46.js" crossorigin="anonymous"></script>
 </head>
 <body data-theme="dark">
     <nav id="mobileNav">
@@ -157,6 +158,28 @@
 
         </div>
     </section>
+
+    <!-- contact section -->
+     <section id="contactSection" class="siteContainer">
+        <h1 class="sectionTitle">
+            Contact
+        </h1>
+        <div class="socialLinks">
+            <div class="phoneNumber">
+                <a href="tel:+18684611445"><i class="fa-solid fa-phone"></i> +1(868)461-1445</a>
+            </div>
+            <div class="github">
+                <a target="_blank" href=""><i class="fa-brands fa-github"></i> victorsolano-vs</a>
+            </div>
+            <div class="email">
+                <a href="mailto:victordsolano@gmail.com"><i class="fa-solid fa-envelope"></i> victordsolano@gmail.com</a>
+            </div>
+            <div class="linkedin">
+                <a target="_blank" href=""><i class="fa-brands fa-linkedin"></i> Victor Solano</a>
+            </div>
+            
+        </div>
+     </section>
 
     <div id="textCursor">
         <p id="langText"></p>
