--- a/index.html
+++ b/index.html
@@ -179,6 +179,31 @@
             </div>
             
         </div>
+        <form name="contact" action="" id="contactForm" netlify>
+            <div class="formInput normalInput">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="">
+            </div>
+            
+            <div class="formInput normalInput">
+                <label for="subject">Subject</label>
+                <input type="text" name="subject" id="">
+            </div>
+
+            <div class="formInput formTextArea">
+                <label for="message">Message</label>
+                <textarea name="message" id=""></textarea>
+            </div>
+
+            <button id="submitBtn" type="submit">
+                Submit
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.4302 5.93005L20.5002 12.0001L14.4302 18.0701" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3.5 12H20.33" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+
+        </form>
      </section>
 
     <div id="textCursor">
