--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
             
         </div>
-        <form name="contact" action="" id="contactForm" netlify>
+        <form name="contact" id="contactForm" netlify>
             <div class="formInput normalInput">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="">
