watermark overflow issue seems to be fixed

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 
     <!-- main section -->
     <header  id="mainSection" class="siteContainer">
+        <div class="watermark">
+            <div class="text">UX/UI DESIGNER</div>
+            <div class="text">SOFTWARE DEVELOPER</div>
+            <div class="text">WEB DEVELOPER</div>
+        </div>
         <div class="leftSection">
             <div class="leftSectionContent">
                 <h1 class="sectionTitle">
