testing a marquee animation

--- a/index.html
+++ b/index.html
@@ -43,9 +43,24 @@
     <!-- main section -->
     <header  id="mainSection" class="siteContainer">
         <div class="watermark">
-            <div class="text">UX/UI DESIGNER</div>
-            <div class="text">SOFTWARE DEVELOPER</div>
-            <div class="text">WEB DEVELOPER</div>
+            <div class="text">
+                <span>UX/UI Designer -&nbsp;</span>
+                <span>UX/UI Designer -&nbsp;</span>
+                <span>UX/UI Designer -&nbsp;</span>
+                <span>UX/UI Designer -&nbsp;</span>
+            </div>
+            <div class="text">
+                <span>SOFTWARE DEVELOPER -&nbsp;</span>
+                <span>SOFTWARE DEVELOPER -&nbsp;</span>
+                <span>SOFTWARE DEVELOPER -&nbsp;</span>
+                <span>SOFTWARE DEVELOPER -&nbsp;</span>
+            </div>
+            <div class="text">
+                <span>WEB DEVELOPER -&nbsp;</span>
+                <span>WEB DEVELOPER -&nbsp;</span>
+                <span>WEB DEVELOPER -&nbsp;</span>
+                <span>WEB DEVELOPER -&nbsp;</span>
+            </div>
         </div>
         <div class="leftSection">
             <div class="leftSectionContent">
