added marquee to ocupy empty space

--- a/index.html
+++ b/index.html
@@ -39,29 +39,30 @@
             
         </div>
     </nav>
+    <div class="watermark">
+        <div class="text">
+            <span>UX/UI Designer &#8226;&nbsp;</span>
+            <span>UX/UI Designer &#8226;&nbsp;</span>
+            <span>UX/UI Designer &#8226;&nbsp;</span>
+            <span>UX/UI Designer &#8226;&nbsp;</span>
+        </div>
+        <div class="text">
+            <span>SOFTWARE DEVELOPER &#8226;&nbsp;</span>
+            <span>SOFTWARE DEVELOPER &#8226;&nbsp;</span>
+            <span>SOFTWARE DEVELOPER &#8226;&nbsp;</span>
+            <span>SOFTWARE DEVELOPER &#8226;&nbsp;</span>
+        </div>
+        <div class="text">
+            <span>WEB DEVELOPER &#8226;&nbsp;</span>
+            <span>WEB DEVELOPER &#8226;&nbsp;</span>
+            <span>WEB DEVELOPER &#8226;&nbsp;</span>
+            <span>WEB DEVELOPER &#8226;&nbsp;</span>
+        </div>
+    </div>
 
     <!-- main section -->
     <header  id="mainSection" class="siteContainer">
-        <div class="watermark">
-            <div class="text">
-                <span>UX/UI Designer -&nbsp;</span>
-                <span>UX/UI Designer -&nbsp;</span>
-                <span>UX/UI Designer -&nbsp;</span>
-                <span>UX/UI Designer -&nbsp;</span>
-            </div>
-            <div class="text">
-                <span>SOFTWARE DEVELOPER -&nbsp;</span>
-                <span>SOFTWARE DEVELOPER -&nbsp;</span>
-                <span>SOFTWARE DEVELOPER -&nbsp;</span>
-                <span>SOFTWARE DEVELOPER -&nbsp;</span>
-            </div>
-            <div class="text">
-                <span>WEB DEVELOPER -&nbsp;</span>
-                <span>WEB DEVELOPER -&nbsp;</span>
-                <span>WEB DEVELOPER -&nbsp;</span>
-                <span>WEB DEVELOPER -&nbsp;</span>
-            </div>
-        </div>
+        
         <div class="leftSection">
             <div class="leftSectionContent">
                 <h1 class="sectionTitle">
