changed to pill buttons and added primary color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/b3a4b70f46.js" crossorigin="anonymous"></script>
 </head>
 <body data-theme="dark">
+    
     <nav id="mobileNav">
         <ul class="mobileLinksContent">
             <li><a href="#mainSection" class="navLink">About</a></li>
@@ -231,6 +232,11 @@
 
         </form>
      </section>
+
+     <!-- modal -->
+      <section>
+
+      </section>
 
     <div id="textCursor">
         <p id="langText"></p>
