added template test styles to modal to ensure functionality and created new js files to better organize code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="https://kit.fontawesome.com/b3a4b70f46.js" crossorigin="anonymous"></script>
 </head>
 <body data-theme="dark">
-    
+
+
+
     <nav id="mobileNav">
         <ul class="mobileLinksContent">
             <li><a href="#mainSection" class="navLink">About</a></li>
@@ -234,8 +236,12 @@
      </section>
 
      <!-- modal -->
-      <section>
-
+      <div id="overlay"></div>
+      <section class="modal">
+        <h1 id="modalExitBtn">test</h1>
+        <div class="modalContent">
+            
+        </div>
       </section>
 
     <div id="textCursor">
