--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
             </div>
             
         </div>
-        <form name="contact" method="POST" id="contactForm" netlify>
-        <!-- <form name="contact" action="POST" id="contactForm" netlify> -->
+        <form name="contact" action="POST" id="contactForm" netlify>
             <div class="formInput normalInput">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="">
