fixed hover bug on socials

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <a href="mailto:victordsolano@gmail.com"><i class="fa-solid fa-envelope"></i> victordsolano@gmail.com</a>
             </div>
             <div class="linkedin">
-                <a target="_blank" href=""><i class="fa-brands fa-linkedin"></i> Victor Solano</a>
+                <a target="_blank" href="#"><i class="fa-brands fa-linkedin linkedinLogo"></i> Victor Solano</a>
             </div>
             
         </div>
