--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
         </div>
     </nav>
-    <!-- <div class="watermark">
+    <div class="watermark">
         <div class="text">
             <span>UX/UI Designer &#8226;&nbsp;</span>
             <span>UX/UI Designer &#8226;&nbsp;</span>
@@ -61,7 +61,7 @@
             <span>WEB DEVELOPER &#8226;&nbsp;</span>
             <span>WEB DEVELOPER &#8226;&nbsp;</span>
         </div>
-    </div> -->
+    </div>
 
     <!-- main section -->
     <header  id="mainSection" class="siteContainer">
