--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <div class="leftSection">
             <div class="leftSectionContent">
                 <h1 class="sectionTitle">
-                    Victor Solano
+                    <span>Victor</span>
+                    <span>Solano</span>
+                    <!-- Victor Solano -->
                 </h1>
                 <div class="location">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -253,6 +255,11 @@
     <div id="textCursor">
         <p id="langText"></p>
     </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script type="module" src="./scripts/main.js"></script>
+    <script src="./scripts/animations.js"></script>
 </body>
 </html>
