--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script type="module" src="./scripts/main.js"></script>
     <script src="./scripts/animations.js"></script>
 </body>
