added social links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar">
         <div class="navbarContent siteContainer">
-            <a href="" class="logo">V.S</a>
+            <a href="#mainSection" class="logo">V.S</a>
             <ul class="linksContent">
                 <li><a href="#mainSection" class="navLink">About</a></li>
                 <li><a href="#experienceSection" class="navLink">Resume</a></li>
@@ -30,7 +30,7 @@
                 <li><a href="#contactSection" class="navLink">Contact</a></li>
             </ul>
             <div class="navbarExtraBtns">
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/victor-solano-villalba"><i class="fa-brands fa-linkedin"></i></a>
                 
                 <button id="themeToggle">
                     <svg class="sun-svg" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -200,13 +200,13 @@
                 <a href="tel:+18684611445"><i class="fa-solid fa-phone"></i> +1(868)461-1445</a>
             </div>
             <div class="github">
-                <a target="_blank" href=""><i class="fa-brands fa-github"></i> victorsolano-vs</a>
+                <a target="_blank" href="https://github.com/victorsolano-vs"><i class="fa-brands fa-github"></i> victorsolano-vs</a>
             </div>
             <div class="email">
                 <a href="mailto:victordsolano@gmail.com"><i class="fa-solid fa-envelope"></i> victordsolano@gmail.com</a>
             </div>
             <div class="linkedin">
-                <a target="_blank" href="#"><i class="fa-brands fa-linkedin linkedinLogo"></i> Victor Solano</a>
+                <a target="_blank" href="https://www.linkedin.com/in/victor-solano-villalba"><i class="fa-brands fa-linkedin linkedinLogo"></i> Victor Solano</a>
             </div>
             
         </div>
@@ -223,7 +223,7 @@
 
             <div class="formInput formTextArea">
                 <label for="message">Message</label>
-                <textarea name="message" id=""></textarea>
+                <textarea rows="5" name="message" id=""></textarea>
             </div>
 
             <button id="submitBtn" type="submit">
